# llm-finetune

./: .dockerignore  .gitignore  Dockerfile  MODEL_CARD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: qa_domain.yaml
data/sample/: domain_qa.jsonl
reports/: eval_report.json  eval_report.md  export.json  export_report.md  sanity.json  tuned.jsonl
requirements/: base.txt  cuda.txt  mac.txt
runs/: registry.jsonl
src/llm_finetune/: __init__.py  config.py  pipeline.py  schema.py
src/llm_finetune/data/: prepare.py  split.py  stats.py
src/llm_finetune/eval/: bootstrap.py  evaluate.py  generate.py  judge.py  metrics.py  report.py
src/llm_finetune/quantize/: __init__.py  artifact.py  backend_cuda.py  backend_mlx.py  backend_mock.py  export.py  exporter.py  llama_cpp.py  sanity.py
src/llm_finetune/repro/: __init__.py  build.py  gate.py  model_card.py  registry.py  version.py
src/llm_finetune/serve/: __init__.py  api.py  backend_cuda.py  backend_gguf.py  backend_mlx.py  backend_mock.py  engine.py  registry.py
src/llm_finetune/train/: backend_base.py  backend_common.py  backend_cuda.py  backend_mlx.py  backend_mock.py  train.py
tests/: test_cli_end_to_end.py  test_config.py  test_data_pipeline.py  test_eval_bootstrap.py  test_eval_metrics.py  test_eval_report.py  test_pipeline_dryrun.py  test_quantize.py  test_repro.py  test_schema.py  test_serve.py  test_stats.py  test_train_backends.py
